# archilog_project

./: INSTALL.md  MANIFEST.md  README.md
code/: .clang-format  .gitignore  CMakeLists.txt
code/include/: config.hh.cmake  config.hpp.cmake
code/include/command/: CommandInterface.hpp  PolyColorCommand.hpp  PolyNbSidesCommand.hpp  PolyRotateCommand.hpp  PolySideLengthCommand.hpp  PolyTranslateCommand.hpp  RectColorCommand.hpp  RectHeightCommand.hpp  RectRotateCommand.hpp  RectTranslateCommand.hpp  RectWidthCommand.hpp
code/include/model/: AbstractShape.hpp  CommandInterface.hpp  Polygon.hpp  PolygonFactory.hpp  Rectangle.hpp  RectangleFactory.hpp  ShapeFactoryInterface.hpp  ShapeInterface.hpp  abstract_shape.hpp  command_interface.hpp  polygon.hpp  polygon_factory.hpp  rectangle.hpp  rectangle_factory.hpp  shape_factory_interface.hpp  shape_interface.hpp
code/include/shape/: AbstractPolygon.hpp  AbstractShape.hpp  AllCommands.hpp  CommandInterface.hpp  Memento.hpp  MementoInterface.hpp  PolyColorCommand.hpp  Polygon.hpp  PolygonColor.hpp  PolygonFactory.hpp  QtPolygon.hpp  QtRectangle.hpp  RectColorCommand.hpp  RectHeightCommand.hpp  RectWidthCommand.hpp  Rectangle.hpp  RectangleColor.hpp  RectangleFactory.hpp  ShapeFactoryInterface.hpp  ShapeGroup.hpp  ShapeInterface.hpp
code/include/view/: MainWindow.hpp  main_window.hpp
code/include/widget/: Bridge.hpp  EditorInterface.hpp  MainWindow.hpp  ObserverInterface.hpp  QtDisplay.hpp  QtEditor.hpp  QtMainScene.hpp  QtMainWindow.hpp  QtPolygon.hpp  QtRectangle.hpp  QtWindow.hpp  QtWindowFactory.hpp  Window.hpp  WindowFactoryInterface.hpp  WindowInterface.hpp
code/src/: CMakeLists.txt  Main.cpp  main.cpp
code/src/command/: PolyColorCommand.cpp  PolyNbSidesCommand.cpp  PolyRotateCommand.cpp  PolySideLengthCommand.cpp  PolyTranslateCommand.cpp  RectColorCommand.cpp  RectHeightCommand.cpp  RectRotateCommand.cpp  RectTranslateCommand.cpp  RectWidthCommand.cpp
code/src/model/: AbstractShape.cpp  CMakeLists.txt  Polygon.cpp  PolygonFactory.cpp  Rectangle.cpp  RectangleFactory.cpp  abstract_shape.cpp  polygon.cpp  polygon_factory.cpp  rectangle.cpp  rectangle_factory.cpp
code/src/shape/: AbstractPolygon.cpp  AbstractShape.cpp  AllCommands.cpp  CMakeLists.txt  PolyColorCommand.cpp  Polygon.cpp  PolygonColor.cpp  PolygonFactory.cpp  QtPolygon.cpp  QtRectangle.cpp  RectColorCommand.cpp  RectHeightCommand.cpp  RectWidthCommand.cpp  Rectangle.cpp  RectangleColor.cpp  RectangleFactory.cpp  ShapeGroup.cpp
code/src/view/: CMakeLists.txt  MainWindow.cpp  main_window.cpp
code/src/widget/: Bridge.cpp  CMakeLists.txt  MainWindow.cpp  QtDisplay.cpp  QtEditor.cpp  QtMainScene.cpp  QtMainWindow.cpp  QtPolygon.cpp  QtRectangle.cpp  QtWindow.cpp  QtWindowFactory.cpp  Window.cpp
code/tests/: CMakeLists.txt  TestGroup.cpp  TestGroup.hpp  TestPoint.cpp  TestPoint.hpp  TestPolygon.cpp  TestPolygon.hpp  TestRectangle.cpp  TestRectangle.hpp  TestShape.cpp  TestShape.hpp
doc/: doxygen.config
